# legionnaire

./: CHANGELOG.md  Cargo.toml  DEPLOYMENT.md  FUZZING.md  FUZZING_SUMMARY.md  GETTING_STARTED.md  PRODUCTION_AUDIT.md  README.md  SECURITY_TESTING.md  USER_GUIDE.md  ci_fuzz.sh  fuzz_runner.sh  fuzz_test_standalone  fuzz_test_standalone.rs  quick_fuzz.sh  reset_terminal.sh  test_profiles.rs  test_ui.sh
benches/: connection_performance.rs  message_parsing.rs
examples/: reliable_client_demo.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_command_validation.rs  fuzz_connection_handling.rs  fuzz_irc_message_parsing.rs  fuzz_parameter_parsing.rs  fuzz_tag_parsing.rs
fuzz_corpus/fuzz_irc_message_parsing/: basic.txt
proptest-regressions/: message.txt
src/: admin_commands.rs  auth.rs  bot.rs  bouncer.rs  capabilities.rs  cli.rs  client.rs  config.rs  connection.rs  connection_manager.rs  credentials.rs  dos_protection.rs  error.rs  legion.rs  lib.rs  logger.rs  main.rs  message.rs  monitoring.rs  recovery.rs  reliable_client.rs  security.rs  setup.rs  tui.rs  tui_simple.rs  ui.rs
src/plugin/: e2ee.rs  manager.rs  mod.rs  weather_bot.rs
tests/: admin_command_tests.rs  integration_security_tests.rs  integration_tests.rs  malicious_server.rs  performance_benchmarks.rs  production_integration_tests.rs  run_security_tests.rs  security_integration_tests.rs  security_test_runner.rs  user_workflow_tests.rs
