[package]
name = "ironchat"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modern, security-hardened IRCv3 client"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/ironchat"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["std"] }
webpki-roots = "0.26"
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
base64 = "0.22"
libc = "0.2"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
secrecy = "0.8"
directories = "5.0"
clap = { version = "4.0", features = ["derive"] }
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
rand = "0.8"
signal-hook = "0.3"
signal-hook-tokio = { version = "0.3", features = ["futures-v0_3"] }
regex = "1.10"
sha2 = "0.10"
hmac = "0.12"
pbkdf2 = { version = "0.12", features = ["simple"] }

[[example]]
name = "reliable_client_demo"
path = "examples/reliable_client_demo.rs"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
proptest = "1.4"
tempfile = "3.8"
serial_test = "3.0"
criterion = { version = "0.5", features = ["html_reports"] }
rstest = "0.18"
test-case = "3.3"
wiremock = "0.5"
async-trait = "0.1"
arbitrary = { version = "1.3", features = ["derive"] }
rcgen = "0.12"

